# gsync

./: .gitignore  README.md  pyproject.toml
src/gsync/: __init__.py  client.py  config.py  sync.py  sync_manager.py
