[project]
name = "gsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ffsedd", email = "ffsedd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.0",
]

[project.scripts]
gsync = "gsync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
